--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </div>
     </div>
     <div style="display: flex; justify-content: center; align-items: center;">
-        <a href="https://divyanshnatani.github.io/sasha/" class="btn" style="text-decoration: none; padding: 15px 30px; font-size: 30px;">Go to Homepage</a>
+        <a href="https://invisibleflame.github.io/sasha/" class="btn" style="text-decoration: none; padding: 15px 30px; font-size: 30px;">Go to Homepage</a>
     </div>
 </body>
 <script>
